[tool.poetry]
name = "line-pay-testing"
version = "0.1.0"
description = ""
authors = ["JackXu19930319 <49975224+JackXu19930319@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
flask = "^3.0.3"
flask-cors = "^4.0.1"
gevent = "^24.2.1"
httpx = "^0.27.0"
requests = "^2.32.3"
pykintone = "^0.3.10"
line-pay = "^0.2.0"
flask-bootstrap = "^3.3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
